Follow new colour schema... Minor fixes
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1174 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -219,6 +219,8 @@ msg.statistics=MetaboLights study repository statistics
 msg.useroptions=these are your account options.
 msg.useroptionscurator=As a curator, you may also want to ...
 msg.fetchingData=Fetching data...
+msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose.
+msg.T&Cinvalid=You must accept EBI terms and conditions.
 
 
 # Ebeye-client messages
