--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -55,7 +55,7 @@ label.contact=Contact us
 label.message=Message to the MetaboLights team
 label.aboutMetab=About MetaboLights
 label.ftpDownload=Download experiment
-label.searchFilter=Filter by
+label.searchFilter=Filter your results
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
 label.updatestudy=Resubmit study
