Committing Messages_en file
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1189 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -244,6 +244,8 @@ ref.msg.searchResult=results found for
 ref.msg.noResult=No results were found for your query. You can search for a wide range of metabolites. Examples: 
 ref.msg.emptyBrowse=results found
 ref.msg.filterResults=Filter your results
+ref.msg.Navigate=Navigate:
+ref.msg.JumpTo=Jump to:
 
 ref.compound.synonyms=Synonyms
 ref.compound.tab.characteristics=Characteristics
