Getting Gallery items from database, no web page to administer yet
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1192 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -79,10 +79,13 @@ label.metabolites.description=Description
 label.metabolites.formula=Formula
 label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any suggestions for enhanced or new functionality
 label.stats=Statistics
+label.paramHeader=MetaboLights Parameters
+label.paramName=Parameter Name
+label.paramValue=Parameter Value
+
 title.serviceName=MetaboLights
 title.download=Download
 title.submit=Submit
-
 
 menu.home=home
 menu.browse=browse
@@ -104,6 +107,7 @@ menu.downloadplugin=Download latest metabolite identification plugin
 menu.config=configuration
 menu.users=users
 menu.Ebeye=Ebeye-Help
+menu.parameters=parameters
 
 # Happy messages
 msg.metabolights=MetaboLights: a database for metabolomics experiments and derived information
