minor bug fixes: Left margin in some pages (about, download, login) Bug in autocomplete filter search box, when clicking with the mouse. Result page layout.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1203 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -177,6 +177,9 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 \n\n\nKind regards,\
 \nThe MetaboLights Team
 msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed...
+msg.searchedInfo=MetaboLights results for
+msg.browsingInfo=You are browsing MetaboLights
+msg.otherebiresults=Show more data from EMBL-EBI
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
 msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanin">alanin</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
@@ -301,7 +304,7 @@ BIISubmit.fileUploadComplete=File upload complete for
 # Mail messages
 mail.noreplyaddress=no-reply@ebi.ac.uk
 mail.queuedStudy.subject=Thank you! Your study {0} is now waiting to be processed.
-mail.queuedStudy.body=Hi {0}\n\nWe have received your submission, you uploaded the file {1}. \n\nPlease be patient whilst your submission is validated, processed and made available online.\nWe will send you another email with the results of our validation and processing.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nFile size\: {2} \nTo be public on\: {3}\nYour computer name\: {4}\nSubmitted: {5}.
+mail.queuedStudy.body=Hi {0}\n\nWe have received your submission, you uploaded the file {1}. \n\nPlease be patient whilst your submission is validated, processed and made available online.\nWe will send you another email with the results of our validation and processing.\n\nMany thanks for submitting your data to MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nFile size\: {2} \nTo be public on\: {3}\nServer name\: {4}\nSubmitted: {5}.
 mail.submittedStudy.subject=Congratulations\! Your study {0} is been successfully processed\!
 mail.submittedStudy.body=We are happy to communicate that your submitted study ({0}) has been successfully processed. \n\nYour study is now identified in MetaboLights as {1}. \n\nThe public release date is {2}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{1}.
 mail.errorInStudy.subject=We can not process {0}
