Add NMR/MS specific columns to the metabolite identified tables
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1216 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -182,7 +182,7 @@ msg.browsingInfo=You are browsing MetaboLights
 msg.otherebiresults=Show more data from EMBL-EBI
 msg.searchResults=Search result(s)
 msg.nothingFound=No results were found for your query.
-msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanin">alanin</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
+msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
 msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
@@ -335,3 +335,7 @@ help.url.account=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQ
 help.url.submit=<a href=https://docs.google.com/document/d/1uL97eA5rozKHyXUbngQJNy-iwQXic7GMVK8bAQSWaCU/view#heading=h.9jliam4ei6tf>Submit&nbsp;you&nbsp;study&nbsp;to&nbsp;MetaboLights</a>
 label.metabolites.smiles=Smiles
 label.metabolites.inchi=Inchi
+label.metabolites.multiplicity=Multiplicity
+label.metabolites.chemicalshift=Chemical shift
+label.metabolites.retentiontime=Retention time
+label.metabolites.mz=m/z
