Change headers to h2 or h2 strapline Resizable input box in facets new color....darker, more contrast. fix entry layout.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1218 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -185,7 +185,7 @@ msg.nothingFound=No results were found for your query.
 msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
-msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="biisubmit">Submit</a> page
+msg.nothingFoundPersonal=We have no private data to show you at the moment. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
 msg.indexed=Database indexed.
 msg.notindexed=You must be logged in as a curator to reindex.
 msg.showing=showing
