Split controllers and hanlde request properly (MTBLS* -> EntryController, MTBLC* -> CompoundController,...) Extract and Refactor file download functionality (FileDispatcherController) New error image BUg in search result page in mode: "My studies" (do not show "You are browsing...").
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1225 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -144,8 +144,8 @@ msg.submCredentialsShort=Welcome to MetaboLights study submission
 msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
 msg.error.general=There was an unexpected error.<br/>
 msg.upload=A brand new study
-msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="submitHelp">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="submitHelp">guide</a> to compile your ISATab archive file you can upload it using the file uploader below.
-msg.upload.desc2=Go to <a href="submitHelp">How to submit to MetaboLights</a> guide.
+msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="help">step-by-step guide</a> to help you.<BR/><BR/>Once you have used the <a href="help">guide</a> to compile your ISATab archive file you can upload it using the file uploader below.
+msg.upload.desc2=Go to <a href="help">How to submit to MetaboLights</a> guide.
 msg.upload.notValid=Please provide a valid file name..
 msg.upload.queueditems=You have currently some studies in the queue waiting to be processed. <b>Please, wait for your previous studies to be processed before submitting a new one.</b>
 msg.uploaded.ok1=You have successfully uploaded your experiment to MetaboLights.
@@ -202,7 +202,7 @@ msg.makestudypublic.msg=This will update the public release date of the study. I
 msg.makestudypublic.ok.title=Public release date updated
 msg.makestudypublic.ok.msg= Your study's public release date has been updated.
 msg.updatestudy.title=Update study ({0}): {1}
-msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://www.isa-tools.org/">ISAcreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="submitHelp">step-by-step guide</a> to help you.
+msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://www.isa-tools.org/">ISAcreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="help">step-by-step guide</a> to help you.
 msg.updatestudy.ok.title=Study {0} updated.
 msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}. 
 msg.makestudypublic.nofilefound=The IsaTab zip file for the study {0} can not be found. Please contact the MetaboLights team.
