New arrows image Redirect to index in file dispatcher when there is an error add resizable textbox to the new css (test) use spring:url for css, javascript, and images..
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1229 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -294,7 +294,7 @@ NotEmpty.concatUsForm.message=Message must not be empty
 
 # General controller messages, prefix with controller name
 Entry.fileMissing=File does not exist, please contact the MetaboLights Team
-Entry.notAuthorised=You are not authorised to access this file, please log in as the submitter
+Entry.notAuthorised=You are not authorised to access this file, please log in as an authorised user
 BIISubmit.fileEmpty=File must not be empty
 BIISubmit.dateEmpty=You must choose a date for the study to become public, this can be up to 5 years in the future
 BIISubmit.fileExtension=You must choose a zip file.
@@ -339,3 +339,4 @@ label.metabolites.multiplicity=Multiplicity
 label.metabolites.chemicalshift=Chemical shift
 label.metabolites.retentiontime=Retention time
 label.metabolites.mz=m/z
+submittedFile=See the submitted file
