Fix study health tab at config page to use the property filesystem folders (publicFtpLocation and privateFtpStageLocation). Changed download icon in the entry page. minor fixes when linking the data, and metabolites identifies tab to the files Improved a bit entry page load time.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1230 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -339,4 +339,4 @@ label.metabolites.multiplicity=Multiplicity
 label.metabolites.chemicalshift=Chemical shift
 label.metabolites.retentiontime=Retention time
 label.metabolites.mz=m/z
-submittedFile=See the submitted file
+submittedFile=download the submitted file
