Changed search to MTBL* to include both compounds and studies. Moved IUPAC to characteristic page. Landing page now has Name, description,, studies fields.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1231 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -239,10 +239,10 @@ ebeye.msg.showing=showing
 
 # Reference Layer Messages
 ref.msg.doamin=Please specify the domain, \'chebi\' or \'metabolights\'.
-ref.msg.iupac=IUPAC Name\:
+ref.msg.iupac=Name\:
 ref.msg.chebi.name=CHEBI\:
 ref.msg.chebi.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/advancedSearchFT\.do\?searchString\=
-ref.msg.mtbl.studies=Studies
+ref.msg.mtbl.studies=Studies\:
 ref.msg.mtbls.url=http\:\/\/www\.ebi\.ac\.uk\/metabolights\/search\?freeTextQuery\=
 ref.msg.chebi.image.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/displayImage\.do\?defaultImage\=true\&imageIndex\=0\&chebiId\=
 ref.msg.technology=Technology
@@ -253,6 +253,7 @@ ref.msg.emptyBrowse=results found
 ref.msg.filterResults=Filter your results
 ref.msg.Navigate=Navigate:
 ref.msg.JumpTo=Jump to:
+
 
 ref.compound.synonyms=Synonyms
 ref.compound.tab.characteristics=Characteristics
@@ -265,6 +266,8 @@ ref.compound.tab.reactions=Reactions
 ref.compound.tab.nmrspectra=NMR spectra
 ref.compound.tab.msspectra=MS spectra
 ref.compound.tab.literature=Literature
+ref.compound.name=Name\:
+ref.compound.description=Description\:
 
 #Frontier Messages
 frontier.strapline.message=A database for Metabolomics experiments and derived information
