Update gallery ids change (not persisted) (Empty box will retrieve the ids from the db. Layout fix for page index bottom of search results
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1232 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -342,4 +342,4 @@ label.metabolites.multiplicity=Multiplicity
 label.metabolites.chemicalshift=Chemical shift
 label.metabolites.retentiontime=Retention time
 label.metabolites.mz=m/z
-submittedFile=download the submitted file
+submittedFile=download file
