Added EBI Train online to Help page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1244 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -228,6 +228,7 @@ msg.useroptionscurator=As a curator, you may also want to ...
 msg.fetchingData=Fetching data...
 msg.T&CAcceptance=I understand that all public data is freely available by any individual and for any purpose.
 msg.T&Cinvalid=You must accept EBI terms and conditions.
+msg.trainOnline=A quick introduction to MetaboLights is also available on  <a href="http://www.ebi.ac.uk/training/online/course/metabolights-quick-tour/what-metabolights">EBI Train Online</a>
 
 
 # Ebeye-client messages
