--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -314,15 +314,15 @@ mail.submittedStudy.body=We are happy to inform you that your submitted study ({
 mail.errorInStudy.subject=We can not process {0}
 mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\n\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTechnical info\:\nFile\:{0}\nError\:{1}.
 mail.updateStudy.subject=Study {0} updated.
-mail.updateStudy.body=We are happy to communicate you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
+mail.updateStudy.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
 mail.publicReleaseDate.subject=Public release date of {0} updated.
-mail.publicReleaseDate.body=We are happy to communicate you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
+mail.publicReleaseDate.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
 mail.queuedPRDUpdate.subject=Thank you! The public release date update for {0} is now waiting to be processed.
-mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nStudy\:{1}\nTo be public on\: {2}\nYour computer name\: {3}\nUPDATING PUBLIC RELEASE DATE.
+mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nStudy\:{1}\nTo be public on\: {2}\nServer name\: {3}\nUPDATING PUBLIC RELEASE DATE.
 mail.queuedDeletion.subject=The study {0} is now waiting to be deleted.
-mail.queuedDeletion.body=Hi {0}\n\nYou have requested to delete study {1}. \nBe aware that this accession number will no longer be available, so please do not try to use this reference any longer.\n\nPlease be patient whilst your request is processed.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for using MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nYour computer name\: {2}\nStudy\:{1}\nDELETE.
+mail.queuedDeletion.body=Hi {0}\n\nYou have requested to delete study {1}. \nBe aware that this accession number will no longer be available, so please do not try to use this reference in future.\n\nPlease be patient whilst your request is processed.\nUntil then, just keep an eye for our next email.\n\nMany thanks for using MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nServer name\: {2}\nStudy\:{1}\nDELETE.
 mail.studyDeleted.subject=Study {0} deleted.
-mail.studyDeleted.body=We are happy to communicate you that your study ({0}) has been successfully deleted and is no longer in our system.
+mail.studyDeleted.body=We are happy to inform you that your study ({0}) has been successfully deleted and is no longer in our system.
 url.isatools=http://www.isa-tools.org/
 #EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
 url.EBIheaderTop=/inc/head.html
@@ -344,3 +344,4 @@ label.metabolites.chemicalshift=Chemical shift
 label.metabolites.retentiontime=Retention time
 label.metabolites.mz=m/z
 submittedFile=download file
+label.onBehalf=On behalf of
