Forgot to commit this.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1249 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -254,6 +254,10 @@ ref.msg.emptyBrowse=results found
 ref.msg.filterResults=Filter your results
 ref.msg.Navigate=Navigate:
 ref.msg.JumpTo=Jump to:
+ref.msg.CitationTitle=Title
+ref.msg.CitationAuthors=Authors
+ref.msg.CitationPubMed=PubMed
+ref.msg.CitationAbstract=Abstract
 
 
 ref.compound.synonyms=Synonyms
