Cleaned up code.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1252 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -240,12 +240,12 @@ ebeye.msg.showing=showing
 
 # Reference Layer Messages
 ref.msg.doamin=Please specify the domain, \'chebi\' or \'metabolights\'.
-ref.msg.iupac=Name\:
-ref.msg.chebi.name=CHEBI\:
-ref.msg.chebi.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/advancedSearchFT\.do\?searchString\=
-ref.msg.mtbl.studies=Studies\:
-ref.msg.mtbls.url=http\:\/\/www\.ebi\.ac\.uk\/metabolights\/search\?freeTextQuery\=
-ref.msg.chebi.image.url=http\:\/\/www\.ebi\.ac\.uk\/chebi\/displayImage\.do\?defaultImage\=true\&imageIndex\=0\&chebiId\=
+ref.msg.iupac=Name:
+ref.msg.chebi.name=CHEBI:
+ref.msg.chebi.url=http://www.ebi.ac.uk/chebi/advancedSearchFT.do?searchString=
+ref.msg.mtbl.studies=Studies:
+ref.msg.mtbls.url=http://www.ebi.ac.uk/metabolights/search?freeTextQuery=
+ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=true&imageIndex=0&chebiId=
 ref.msg.technology=Technology
 ref.msg.organism=Organism
 ref.msg.searchResult=results found for 
