New JNDI param for EBI host.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1259 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -214,7 +214,7 @@ msg.validation.studyIdDoNotMatch=The file you are uploading has a wrong Study Id
 msg.validation.backupFileExists=There is already a backup file for the study {0}. The process can not continue. Please contact MetaboLights team this is a technical problem.
 msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
 msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are eagerly waiting for your study to become public, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
-msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: http://www.ebi.ac.uk/metabolights/{0}
+msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: {1}{0}
 msg.studyQueueSuccesfully=You have now successfully uploaded your study file. Your study is now in the submission' queue waiting to be processed.\n\nYou will receive and email when the submission proccess is finished.\n\nThank you\!. This does not means that your study has passed our validation step. We will notify you in case it fails.
 msg.PRDUpdateQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the updating proccess is finished.\n\nThank you\!.
 msg.deleteStudy.userValidation=You are logged in as {0} and the owner of {1} is {2}. Only {2} can delete {1}.\n
@@ -319,9 +319,9 @@ mail.submittedStudy.body=We are happy to inform you that your submitted study ({
 mail.errorInStudy.subject=We can not process {0}
 mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\n\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know it can be difficult.\n\nTechnical info\:\nFile\:{0}\nError\:{1}.
 mail.updateStudy.subject=Study {0} updated.
-mail.updateStudy.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
+mail.updateStudy.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: {2}{0}.
 mail.publicReleaseDate.subject=Public release date of {0} updated.
-mail.publicReleaseDate.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: http\://www.ebi.ac.uk/metabolights/{0}.
+mail.publicReleaseDate.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: {2}{0}.
 mail.queuedPRDUpdate.subject=Thank you! The public release date update for {0} is now waiting to be processed.
 mail.queuedPRDUpdate.body=Hi {0}\n\nYou have requested to update the public release date of {1}. Please be patient whilst your request is processed and made available online.\nUntil then, just keep an eye out for our next email.\n\nMany thanks for having your data in MetaboLights.\n\nMetaboLights Team\n\nTechnical info\:\nStudy\:{1}\nTo be public on\: {2}\nServer name\: {3}\nUPDATING PUBLIC RELEASE DATE.
 mail.queuedDeletion.subject=The study {0} is now waiting to be deleted.
