Created an FTP link next to download... link on study page.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1264 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -54,7 +54,8 @@ label.sampleAttr=Sample Attribute(s)
 label.contact=Contact us
 label.message=Message to the MetaboLights team
 label.aboutMetab=About MetaboLights
-label.ftpDownload=Download experiment
+label.ftpDownload=Download: Experiment
+label.ftp=Files
 label.searchFilter=Filter your results
 label.publicDate=Select the public release date
 label.makestudypublic=Update release date
