Preserving and displaying the initial study id, as supplied by the submitter
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1270 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -83,6 +83,7 @@ label.stats=Statistics
 label.paramHeader=MetaboLights Parameters
 label.paramName=Parameter Name
 label.paramValue=Parameter Value
+label.submittedId=Submitters original identifier
 
 title.serviceName=MetaboLights
 title.download=Download
