Change the "nothingFoundPersonal message to a more accurate message (include public studies)..
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1276 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -188,7 +188,7 @@ msg.searchSuggestions=You can search for a wide range of items like metabolites,
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
 msg.studyAccessRestricted=This is a PRIVATE study, you are not Authorised to view this study.
-msg.nothingFoundPersonal=You currently have no private studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
+msg.nothingFoundPersonal=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
 msg.indexed=Database indexed.
 msg.notindexed=You must be logged in as a curator to reindex.
 msg.showing=showing
