- Don't send annoying emails when the study submission form failed validation (no file name or date given).  Only give feedback to the submitter - Reworded the (screen) message when uploading
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1282 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -217,7 +217,7 @@ msg.validation.backupFileExists=There is already a backup file for the study {0}
 msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
 msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are eagerly waiting for your study to become public, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
 msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: {1}{0}
-msg.studyQueueSuccesfully=You have now successfully uploaded your study file. Your study is now in the submission' queue waiting to be processed.\n\nYou will receive and email when the submission proccess is finished.\n\nThank you\!. This does not means that your study has passed our validation step. We will notify you in case it fails.
+msg.studyQueueSuccesfully= Thank you\! <br/><br/>You have successfully uploaded your study to our submission queue.\n\n<br/>You will receive further emails when your study is validated, processed and made available online.
 msg.PRDUpdateQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the updating proccess is finished.\n\nThank you\!.
 msg.deleteStudy.userValidation=You are logged in as {0} and the owner of {1} is {2}. Only {2} can delete {1}.\n
 msg.deleteStudy.statusValidation={0} is PUBLIC therefore can't be deleted.\n
@@ -236,8 +236,8 @@ msg.trainOnline=A quick introduction to MetaboLights is also available on  <a hr
 
 # Ebeye-client messages
 ebeye.msg.domain=List of domains. Total 
-ebeye.msg.fields=List of Fields. Total 
-ebeye.msg.entries=List of entries. Total 
+ebeye.msg.fields=List of Fields. Total
+ebeye.msg.entries=List of entries. Total
 ebeye.msg.query=Query for entries and domains below:
 ebeye.msg.showing=showing 
 
@@ -306,7 +306,7 @@ NotEmpty.concatUsForm.message=Message must not be empty
 # General controller messages, prefix with controller name
 Entry.fileMissing=File does not exist, please contact the MetaboLights Team
 Entry.notAuthorised=You are not authorised to access this file, please log in as an authorised user
-BIISubmit.fileEmpty=File must not be empty
+BIISubmit.fileEmpty=Filename must not be empty
 BIISubmit.dateEmpty=You must choose a date for the study to become public, this can be up to 5 years in the future
 BIISubmit.fileExtension=You must choose a zip file.
 BIISubmit.newAccNumbers=These are the new accession numbers:
