'show other EBI results' working now.  Code cleaned up.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1283 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -236,8 +236,8 @@ msg.trainOnline=A quick introduction to MetaboLights is also available on  <a hr
 
 # Ebeye-client messages
 ebeye.msg.domain=List of domains. Total 
-ebeye.msg.fields=List of Fields. Total
-ebeye.msg.entries=List of entries. Total
+ebeye.msg.fields=List of Fields. Total 
+ebeye.msg.entries=List of entries. Total 
 ebeye.msg.query=Query for entries and domains below:
 ebeye.msg.showing=showing 
 
@@ -252,7 +252,8 @@ ref.msg.chebi.image.url=http://www.ebi.ac.uk/chebi/displayImage.do?defaultImage=
 ref.msg.technology=Technology
 ref.msg.organism=Organism
 ref.msg.searchResult=results found for 
-ref.msg.noResult=No results were found for your query. You can search for a wide range of metabolites. Examples: 
+ref.msg.noResult=No results were found for your query.
+ref.msg.noResultSearch=You can search for a wide range of metabolites. Examples:
 ref.msg.emptyBrowse=results found
 ref.msg.filterResults=Filter your results
 ref.msg.Navigate=Navigate:
