--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -178,7 +178,7 @@ msg.accountActive=\n\nYour new MetaboLights account "{0}" has been activated.\
 \n\nYou can now use this account to submit data to the MetaboLights repository.\
 \n\n\nKind regards,\
 \nThe MetaboLights Team
-msg.pleaseWaitForUpload=Please wait a while for the file to be validated and processed...
+msg.pleaseWaitForUpload=Please wait a while for the file to be uploaded...
 msg.searchedInfo=MetaboLights results for
 msg.browsingInfo=You are browsing MetaboLights
 msg.otherebiresults=Show more data from EMBL-EBI
