Tab names changed.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1288 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -266,11 +266,13 @@ ref.msg.CitationAbstract=Abstract
 
 ref.compound.synonyms=Synonyms
 ref.compound.tab.characteristics=Characteristics
+ref.compound.tab.chemistry=Chemistry
 ref.compound.tab.characteristics.definition=Definition
 ref.compound.tab.characteristics.chemicalproperties=Chemical properties
 ref.compound.tab.characteristics.formulae=Chemical formulae
 ref.compound.tab.foundin=Source
-ref.compound.tab.pathways=Metabolic pathways
+ref.compound.tab.biology=Biology
+ref.compound.tab.pathways=Pathways
 ref.compound.tab.reactions=Reactions
 ref.compound.tab.nmrspectra=NMR spectra
 ref.compound.tab.msspectra=MS spectra
