Finally!! Redesign has helped. The fast, working version of Reference Layer. Known issues with facets and querying EBI.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1290 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -183,7 +183,7 @@ msg.searchedInfo=MetaboLights results for
 msg.browsingInfo=You are browsing MetaboLights
 msg.otherebiresults=Show more data from EMBL-EBI
 msg.searchResults=Search result(s)
-msg.nothingFound=No results were found for your query.
+msg.nothingFound=No results were found for your query
 msg.searchSuggestions=You can search for a wide range of items like metabolites, organisms, studies and so on. Examples <a href="search?freeTextQuery=alanine">alanine</a>, <a href="search?freeTextQuery=human">human</a>, <a href="search?freeTextQuery=urine">urine</a>, <a href="search?freeTextQuery=MTBLS1">MTBLS1</a>
 msg.noPageFound=We could not find the page requested:
 msg.noStudyFound=Hmmm... We could not find the study you requested
