Layout changed. Now studies layout will look separate than compounds.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1302 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -278,7 +278,8 @@ ref.compound.tab.nmrspectra=NMR spectra
 ref.compound.tab.msspectra=MS spectra
 ref.compound.tab.literature=Literature
 ref.compound.name=Name\:
-ref.compound.description=Description\:
+ref.compound.title=Title
+ref.compound.description=Description
 
 #Frontier Messages
 frontier.strapline.message=A database for Metabolomics experiments and derived information
